Fixed layout issues

--- a/plugins/lfa-core/frontend/styles/layout/animations.styl
+++ b/plugins/lfa-core/frontend/styles/layout/animations.styl
@@ -9,8 +9,11 @@ animated-transitions(duration)
   .menu, .navigation-menu
     transition: transform duration ease, opacity duration ease
 
+  #textbook
+    transition: transform duration-sidebar ease-sidebar
+
   #content
-    transition: transform duration-sidebar ease-sidebar, opacity duration-sidebar ease
+    transition: opacity duration-sidebar ease
 
   #leftbar
   #rightbar
