--- a/plugins/lfa-core/frontend/styles/layout/content.styl
+++ b/plugins/lfa-core/frontend/styles/layout/content.styl
@@ -3,8 +3,13 @@ body
   // Actual content/chapter should take up all available height; so we can click anywhere
   // to close the sidebars.
 
+  #content
+    width: 100%
+    height: 100%
+
   #scrollview
     width: 100%
+    height: 100%
 
     &.locked
       overflow: hidden
@@ -14,14 +19,30 @@ body
       -ms-user-select: none;
       user-select: none;
 
-  #content, #textbook, > .container, #scrollview
-    height: 100%
+    @media (min-width: screen-sm)
+      padding-top: 1.5em
+      padding-bottom: 1.5em
+
+  #textbook
+    width: 100%
+    margin: 0 auto
+    overflow: hidden
+    padding-bottom: 2em
+
+    section
+      padding: 0 1em
+
+    @media (min-width: screen-sm)
+      width: content-width-sm
+
+    @media (min-width: screen-md)
+      width: content-width-md
   
   // Animate the sidebars into view when they get activated. Move the entire page.
   &.leftbar-active
     #leftbar, .menu-item-left
       transform: translate3d(sidebar-width, 0, 0)
-    #content
+    #textbook
       transform: translate3d((sidebar-width * 0.5), 0, 0)
     // Make the other sidebar-toggle dissapear when you open a sidebar.
     .menu-item-right
@@ -31,7 +52,7 @@ body
   &.rightbar-active
     #rightbar, .menu-item-right
       transform: translate3d(- sidebar-width, 0, 0)
-    #content
+    #textbook
       transform: translate3d((sidebar-width * -0.5), 0, 0)
     .menu-item-left
       transform: translate3d(- toggle-hitbox, 0, 0)
