--- a/plugins/lfa-core/frontend/styles/layout/menu.styl
+++ b/plugins/lfa-core/frontend/styles/layout/menu.styl
@@ -63,6 +63,6 @@ body
       right: 0
 
     // Extra margin top to accomodate the menu.
-    #content
-      margin-top: 3em
-      margin-bottom: 3em
+    #textbook
+      padding-top: 3em
+      padding-bottom: 5em
